fix(web): align case details documentation and costs table action columns to the right

--- a/appeals/web/src/styles/7-components/_table.scss
+++ b/appeals/web/src/styles/7-components/_table.scss
@@ -2,83 +2,90 @@
 
 .govuk-accordion__section-content {
   .govuk-summary-list:last-child {
-	margin-bottom: 25px;
+    margin-bottom: 25px;
   }
 
   .govuk-table__row:last-child {
-	.govuk-table__header,
-	.govuk-table__cell {
-	  border-bottom: none;
-	}
+    .govuk-table__header,
+    .govuk-table__cell {
+      border-bottom: none;
+    }
   }
 }
 
 .pins-table {
   &--fixed {
-	border-bottom: 1px solid color.govuk-colour("mid-grey");
-	table-layout: fixed;
+    border-bottom: 1px solid color.govuk-colour("mid-grey");
+    table-layout: fixed;
   }
 
   &__cell {
-	&--xs {
-	  width: 80px;
-	}
+    &--xs {
+      width: 80px;
+    }
 
-	&--s {
-	  width: 140px;
-	}
+    &--s {
+      width: 140px;
+    }
 
-	&--m {
-	  width: 180px;
-	}
+    &--m {
+      width: 180px;
+    }
 
-	&--l {
-	  width: 270px;
-	}
+    &--l {
+      width: 270px;
+    }
 
-	&--xl {
-	  width: 330px;
-	}
+    &--xl {
+      width: 330px;
+    }
+  }
+
+  &__header,
+  &__cell {
+    &--align-right {
+        text-align: right;
+    }
   }
 
   &--questionnaire {
-	table-layout: fixed;
+    table-layout: fixed;
 
-	tbody tr th {
-	  width: 330px;
-	}
+    tbody tr th {
+      width: 330px;
+    }
 
-	tbody tr td:last-child {
-	  width: 400px;
-	}
+    tbody tr td:last-child {
+      width: 400px;
+    }
   }
 
-	&--error {
-	tbody .govuk-table__row{
-		border-left: 5px solid color.govuk-colour("red");
+  &--error {
+      tbody .govuk-table__row{
+          border-left: 5px solid color.govuk-colour("red");
 
-		td:first-child {
-			padding-left: 1rem;
-		}
-	}
-	}
+          td:first-child {
+              padding-left: 1rem;
+          }
+      }
+  }
 }
 
 .pins-dashboard-list--drafts {
   .govuk-accordion__controls {
-	display: none;
+    display: none;
   }
 
   .govuk-accordion__section-toggle-text {
-	font-size: 0;
-	position: absolute;
+    font-size: 0;
+    position: absolute;
 
-	&::after {
-	  content: 'Show all draft cases';
-	  font-size: 19px;
-	  position: relative;
-	  top: 2px;
-	}
+    &::after {
+      content: 'Show all draft cases';
+      font-size: 19px;
+      position: relative;
+      top: 2px;
+    }
   }
 }
 
@@ -86,57 +93,56 @@
   margin-top: 2rem;
 
   h2 {
-	margin-bottom: 0;
+    margin-bottom: 0;
   }
 
   .govuk-accordion__section-toggle-text {
-	font-size: 0;
+    font-size: 0;
 
-	&:after {
-	  content: "Show subfolders";
-	  font-size: 19px;
-	  position: relative;
-	  top: 7px;
-	  left: 2px;
-	}
+    &:after {
+      content: "Show subfolders";
+      font-size: 19px;
+      position: relative;
+      top: 7px;
+      left: 2px;
+    }
   }
 
   .govuk-accordion__controls {
-	display: none;
+    display: none;
   }
 
   .govuk-accordion__section-button {
-	border: none;
+    border: none;
   }
 
   .govuk-table__cell {
-	border-bottom-style: none;
+    border-bottom-style: none;
   }
 }
 
 #pins-publish-case {
   @media (min-width: 40.0625em) {
-	.govuk-table__header, .govuk-summary-list__key {
-	  width: 260px;
-	}
+    .govuk-table__header, .govuk-summary-list__key {
+      width: 260px;
+    }
   }
 }
 
-
 .timetable-table {
-	.govuk-summary-list__row:last-child {
-		border-bottom: 0;
-	}
+    .govuk-summary-list__row:last-child {
+        border-bottom: 0;
+    }
 
-	.govuk-accordion__section:nth-child(2) button{
-		border-top: 0;
-	}
+    .govuk-accordion__section:nth-child(2) button{
+        border-top: 0;
+    }
 
-	.govuk-accordion__section-heading-text {
-		font-size: 20px;
-	}
+    .govuk-accordion__section-heading-text {
+        font-size: 20px;
+    }
 
-	.govuk-accordion__show-all {
-		display: none;
-	}
+    .govuk-accordion__show-all {
+        display: none;
+    }
 }
